# playground

./: composer.json  package-lock.json  package.json  snowpack.config.mjs  tailwind.config.js
SPARKLE/: README.md  pyproject.toml
SPARKLE/src/sparkle/: __init__.py  agent.py  chat.py  cli.py  config.py  llm.py  onboard.py  parsing.py  prompts.py  tools.py  ui.py
SPARKLE/tests/: test_agent.py  test_config.py  test_llm_e2e.py  test_parsing.py
public/: font.css  index.html  main.js  style.css
