[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sparkle"
version = "0.1.0"
description = "A super-simple, lightweight terminal home for small local agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SPARKLE" }]
keywords = ["llm", "agent", "tui", "ollama", "vllm", "openai", "local"]
dependencies = [
    "prompt_toolkit>=3.0.43,<3.1",
    "httpx>=0.27,<0.29",
]

[project.scripts]
sparkle = "sparkle.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sparkle"]
